[gd_scene load_steps=41 format=3 uid="uid://c358kx1tqg62a"]

[ext_resource type="Script" uid="uid://iy3qvmvloc6g" path="res://Scripts/Enemies/orange_enemy.gd" id="1_35ga3"]
[ext_resource type="Texture2D" uid="uid://b6vmfyfjp34il" path="res://Images/orange_enemy-removebg-preview.png" id="2_pyit1"]
[ext_resource type="PackedScene" uid="uid://diutiim18t4wh" path="res://Scenes/enemy_laser.tscn" id="3_yorfn"]
[ext_resource type="Texture2D" uid="uid://djw4nqlc48n7m" path="res://Images/explosion 4.png" id="4_yorfn"]
[ext_resource type="AudioStream" uid="uid://ddbinalecqfqk" path="res://Sounds/explosion-42132.mp3" id="5_pqctw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqctw"]
radius = 91.5478

[sub_resource type="CircleShape2D" id="CircleShape2D_846de"]
radius = 91.2688

[sub_resource type="AtlasTexture" id="AtlasTexture_j2o8v"]
atlas = ExtResource("4_yorfn")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cf10"]
atlas = ExtResource("4_yorfn")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_m380k"]
atlas = ExtResource("4_yorfn")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_d32l7"]
atlas = ExtResource("4_yorfn")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_clgbh"]
atlas = ExtResource("4_yorfn")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_c658l"]
atlas = ExtResource("4_yorfn")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_baes7"]
atlas = ExtResource("4_yorfn")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb66y"]
atlas = ExtResource("4_yorfn")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_cto4a"]
atlas = ExtResource("4_yorfn")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6360d"]
atlas = ExtResource("4_yorfn")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccnh4"]
atlas = ExtResource("4_yorfn")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu22e"]
atlas = ExtResource("4_yorfn")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqm4o"]
atlas = ExtResource("4_yorfn")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gknyv"]
atlas = ExtResource("4_yorfn")
region = Rect2(2560, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm5tf"]
atlas = ExtResource("4_yorfn")
region = Rect2(3072, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dspr"]
atlas = ExtResource("4_yorfn")
region = Rect2(3584, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n4bm"]
atlas = ExtResource("4_yorfn")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuy2e"]
atlas = ExtResource("4_yorfn")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8qp"]
atlas = ExtResource("4_yorfn")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvdhr"]
atlas = ExtResource("4_yorfn")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiidw"]
atlas = ExtResource("4_yorfn")
region = Rect2(2048, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnlmt"]
atlas = ExtResource("4_yorfn")
region = Rect2(2560, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_q32ri"]
atlas = ExtResource("4_yorfn")
region = Rect2(3072, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_iubjo"]
atlas = ExtResource("4_yorfn")
region = Rect2(3584, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqghs"]
atlas = ExtResource("4_yorfn")
region = Rect2(2048, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqbrn"]
atlas = ExtResource("4_yorfn")
region = Rect2(2560, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ewuh"]
atlas = ExtResource("4_yorfn")
region = Rect2(3072, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7p7p"]
atlas = ExtResource("4_yorfn")
region = Rect2(3584, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi6nh"]
atlas = ExtResource("4_yorfn")
region = Rect2(0, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_14nny"]
atlas = ExtResource("4_yorfn")
region = Rect2(512, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxie3"]
atlas = ExtResource("4_yorfn")
region = Rect2(1024, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjpt0"]
atlas = ExtResource("4_yorfn")
region = Rect2(1536, 2048, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ijkl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2o8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cf10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m380k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d32l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clgbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c658l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baes7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb66y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cto4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6360d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccnh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu22e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqm4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gknyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm5tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dspr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n4bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuy2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvdhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiidw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnlmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q32ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iubjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqghs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqbrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ewuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7p7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi6nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14nny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxie3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjpt0")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}]

[node name="orange_enemy" type="CharacterBody2D"]
script = ExtResource("1_35ga3")

[node name="image" type="Sprite2D" parent="."]
texture = ExtResource("2_pyit1")

[node name="col_enemy" type="CollisionShape2D" parent="."]
position = Vector2(-7, 6)
shape = SubResource("CircleShape2D_pqctw")

[node name="lasers" type="Node2D" parent="."]

[node name="laser_1_pos" type="Marker2D" parent="lasers"]
position = Vector2(-4, -83)

[node name="enemy_laser1" parent="lasers/laser_1_pos" instance=ExtResource("3_yorfn")]

[node name="laser_1_pos2" type="Marker2D" parent="lasers"]
position = Vector2(72, -5)

[node name="enemy_laser2" parent="lasers/laser_1_pos2" instance=ExtResource("3_yorfn")]

[node name="laser_1_pos3" type="Marker2D" parent="lasers"]
position = Vector2(-84, -5)

[node name="enemy_laser3" parent="lasers/laser_1_pos3" instance=ExtResource("3_yorfn")]

[node name="or_enemy_area" type="Area2D" parent="."]

[node name="col_ara" type="CollisionShape2D" parent="or_enemy_area"]
position = Vector2(-5, 7)
shape = SubResource("CircleShape2D_846de")

[node name="or_en_timer" type="Timer" parent="."]
wait_time = 45.0

[node name="queue_free" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="explosion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0ijkl")
animation = &"explosion"
speed_scale = 6.0

[node name="explosion_sound" type="AudioStreamPlayer2D" parent="explosion"]
stream = ExtResource("5_pqctw")
volume_db = -10.0

[node name="on_screen" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="or_enemy_area" to="." method="_on_orange_enemy_area_entered"]
[connection signal="timeout" from="or_en_timer" to="." method="_on_orange_enemy_timer_timeout"]
[connection signal="timeout" from="queue_free" to="." method="_on_queue_free_timeout"]
[connection signal="screen_exited" from="on_screen" to="." method="_on_screen_screen_exited"]
